Fix for logo styling overflow

--- a/public/theme/default/css/dark.css
+++ b/public/theme/default/css/dark.css
@@ -442,3 +442,7 @@ body .ticketDropdown ul::after {
 .articleBody table td {
     border:1px solid var(--neutral);
 }
+
+div .logo {
+  width: 250px;
+}
