--- a/public/theme/default/css/light.css
+++ b/public/theme/default/css/light.css
@@ -189,3 +189,7 @@
     color: white;
     background-color: var(--accent1) !important;
 }
+
+div .logo {
+  width: 250px;
+}
